# game-server

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  NETWORK_PROTOCOL.md  README.md  REPORT.md  specs-communication.md
.github/workflows/: ci.yml  docker-publish.yml
configs/: server.example.toml
server/: .env  Cargo.toml  Makefile
server/docs/: LOCAL_RUN.md
server/src/: auth.rs  backpressure.rs  broadcaster.rs  config.rs  errors.rs  http.rs  lib.rs  lobby.rs  main.rs  matchmaker.rs  metrics.rs  presence.rs  proto.rs  protocol.rs  rate_limit.rs  room.rs  sim.rs  util.rs  ws.rs
server/src/sim/: fixed.rs  mod.rs  physics.rs  rng.rs  snapshot.rs  world.rs
tests/: determinism.rs  e2e_matchmaking.rs  e2e_ws_roundtrip.rs  integration.rs  lobby.rs  network_spec.rs  proto.rs  rate_limit.rs  reconnect.rs
