[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = { version = "0.6", features = ["macros", "ws", "headers"] }
base64 = "0.21"
dashmap = "5"
hmac = "0.12"
prometheus = "0.13"
once_cell = "1"
rand = { version = "0.8", features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "2.3"
sha2 = "0.10"
thiserror = "1"
toml = "0.5"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "signal", "fs"] }
url = "=2.3.1"
tracing = "0.1"
tracing-subscriber = { version = "0.2", default-features = false, features = ["fmt", "env-filter", "json"] }
tower = "0.4"
regex = { version = "1", default-features = false, features = ["std", "unicode", "unicode-case"] }
futures-util = "0.3"

[dev-dependencies]
axum = { version = "0.6", features = ["macros", "ws", "headers"] }
insta = "1"
proptest = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "test-util"] }
serde_json = "1"
