[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = { version = "0.6", features = ["macros", "json"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
dotenvy = "0.15"
figment = { version = "0.10", features = ["env"] }
futures = "0.3"
futures-util = "0.3"
hyper = { version = "0.14", features = ["http1", "server"] }
jsonwebtoken = "9"
once_cell = "1"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "signal", "net"] }
tokio-stream = "0.1"
tungstenite = { version = "0.21" }
tokio-tungstenite = { version = "0.21" }
tokio-util = { version = "0.7", features = ["codec"] }
tower = { version = "0.4", features = ["limit"] }
tower-http = { version = "0.4", features = ["cors", "compression-full", "limit", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
ulid = "1"
url = "2"
serde_repr = "0.1"
thiserror = "1"
base64 = "0.21"

[dev-dependencies]
reqwest = { version = "0.11.18", default-features = false, features = ["json"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "test-util"] }
tokio-tungstenite = { version = "0.21" }
ulid = "1"
anyhow = "1"


[[test]]
name = "integration"
path = "../tests/integration.rs"

[[test]]
name = "lobby"
path = "../tests/lobby.rs"

[[test]]
name = "proto"
path = "../tests/proto.rs"
